--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "bootstrap": "^5.0.1",
+    "bootswatch": "^5.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
